(ui) Fix grid display and calendar toolbar on mobile

--- a/app/frontend/src/stylesheets/modules/trainings/trainings.scss
+++ b/app/frontend/src/stylesheets/modules/trainings/trainings.scss
@@ -13,8 +13,12 @@
   &-grid {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: 1fr;
     gap: 3.2rem;
+
+    @media (min-width: 480px) {
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    }
 
     .panel { margin-bottom: 0; }
   }
